# cpu-tweaks

./: .gitignore  Cargo.toml  README.md  install.sh
assets/: com.github.ehnxnsm.cpu-tweaks.policy  cpu-tweaks.desktop
debian/: changelog  control  copyright  rules
debian/source/: options
src/: main.rs
src/cpu/: apply.rs  mod.rs  sensors.rs  sysfs.rs
src/gui/: app.rs  mod.rs  theme.rs  views.rs
